individual/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ABSTRACT
    ACTUAL
    ADD
    ANNOTATION
    APPEND
    ARRAYOF
    ARROW
    AS
    AT_NO_WS
    BREAK
    BY
    CATCH
    CLASS
    COLONCOLON
    COMMA
    COMMENT
    COMPANION
    CONST
    CONSTRUCTOR
    CONTINUE
    CROSSINLINE
    DATA
    DECR
    DECREMENTIN
    DECREMENTONE
    DIVIDEIN
    DO
    DOUBLE_ARROW
    DOUBLE_SEMICOLON
    DYNAMIC
    ENUM
    EXCL_NO_WS
    EXPECT
    EXTERNAL
    FIELD
    FILE
    FINAL
    FINALLY
    FIRST
    FUN
    GET
    HASH
    IMPORT
    INCR
    INCREMENTIN
    INCREMENTONE
    INCREMENTTIMES
    INDICES
    INFIX
    INIT
    INLINE
    INNER
    INTERFACE
    INTERNAL
    IS
    LAST
    LATEINIT
    LINEBREAK
    LINKEDL
    LISTOF
    LSQUARE
    MARK_1
    MARK_2
    MODIN
    NOINLINE
    OBJECT
    OPEN
    OPERATOR
    OUT
    OVERRIDE
    PACKAGE
    PARAM
    PEEK
    POLL
    PRIVATE
    PROPERTY
    PROTECTED
    PUBLIC
    QUEST_WS
    QUEUE
    RANGE
    RECEIVER
    REIFIED
    REMOVE
    REMOVEI
    REMOVEL
    REMOVEN
    RETURN
    RSQUARE
    SEALED
    SET
    SETPARAM
    SINGLE_QUOTE
    SIZE
    SUM
    SUPER
    SUSPEND
    TAILREC
    TEMPLATE
    THIS
    THREEDOTS
    THROW
    TRY
    TYPEOF
    TYPE_ALIAS
    VALUE
    VAL_TIPO_1
    VARARG
    VAR_TIPO_1
    WHEN
    WHERE
    WHILE

Grammar

Rule 0     S' -> line
Rule 1     line -> impresion
Rule 2     line -> expression
Rule 3     line -> condicionL
Rule 4     line -> condicionR
Rule 5     line -> condicionN
Rule 6     line -> asignacion
Rule 7     line -> asignacion SEMICOLON
Rule 8     line -> for
Rule 9     line -> if
Rule 10    line -> stack
Rule 11    line -> stack_actuar
Rule 12    line -> instance_arraylist
Rule 13    line -> def_estruct_tipoDato
Rule 14    impresion -> PRINT LPAREN term RPAREN
Rule 15    impresion -> PRINTLN LPAREN term RPAREN
Rule 16    for -> FOR LPAREN ID IN ID RPAREN LCURL line RCURL
Rule 17    keywordVariables -> VAR
Rule 18    keywordVariables -> VAL
Rule 19    asignacion -> keywordVariables asignacionSimple
Rule 20    asignacion -> asignacionSimple
Rule 21    asignacionSimple -> ID DOTS tipoDato EQUAL valor
Rule 22    asignacionSimple -> ID EQUAL valor
Rule 23    tipoDato -> TINT
Rule 24    tipoDato -> TLONG
Rule 25    tipoDato -> TFLOAT
Rule 26    tipoDato -> TDOUBLE
Rule 27    tipoDato -> TBOOLEAN
Rule 28    tipoDato -> TCHAR
Rule 29    tipoDato -> TSTRING
Rule 30    valor -> expression
Rule 31    expression -> expression PLUS term
Rule 32    expression -> expression MINUS term
Rule 33    expression -> expression TIMES term
Rule 34    expression -> expression DIVIDE term
Rule 35    expression -> expression MOD term
Rule 36    expression -> term
Rule 37    term -> factor
Rule 38    term -> LPAREN expression RPAREN
Rule 39    factor -> INT
Rule 40    factor -> FLOAT
Rule 41    factor -> LONG
Rule 42    factor -> CHAR
Rule 43    factor -> BOOLEAN
Rule 44    factor -> ID
Rule 45    factor -> STRING_1
Rule 46    if -> IF LPAREN condicion RPAREN LCURL line RCURL
Rule 47    if -> IF LPAREN condicion RPAREN LCURL line RCURL else
Rule 48    else -> ELSE LCURL line RCURL
Rule 49    condicion -> condicionL
Rule 50    condicion -> condicionR
Rule 51    condicion -> condicionN
Rule 52    condicionL -> BOOLEAN opL BOOLEAN
Rule 53    condicionL -> ID opL ID
Rule 54    condicionL -> ID opL BOOLEAN
Rule 55    condicionL -> BOOLEAN opL ID
Rule 56    condicionR -> INT opR INT
Rule 57    condicionR -> INT opR FLOAT
Rule 58    condicionR -> INT opR LONG
Rule 59    condicionR -> FLOAT opR FLOAT
Rule 60    condicionR -> FLOAT opR INT
Rule 61    condicionR -> FLOAT opR LONG
Rule 62    condicionR -> LONG opR LONG
Rule 63    condicionR -> LONG opR INT
Rule 64    condicionR -> LONG opR FLOAT
Rule 65    condicionR -> STRING_1 opR STRING_1
Rule 66    condicionR -> CHAR opR CHAR
Rule 67    condicionR -> ID opR ID
Rule 68    condicionN -> EXCL_WS BOOLEAN
Rule 69    condicionN -> EXCL_WS ID
Rule 70    opL -> CONJ
Rule 71    opL -> DISJ
Rule 72    opR -> LANGLE
Rule 73    opR -> RANGLE
Rule 74    opR -> LE
Rule 75    opR -> GE
Rule 76    opR -> EXCL_EQ
Rule 77    opR -> EXCL_EQEQ
Rule 78    opR -> AS_SAFE
Rule 79    opR -> EQEQ
Rule 80    opR -> EQEQEQ
Rule 81    stack -> keywordVariables ID DOTS def_estruct_tipoDato EQUAL instance_arraylist
Rule 82    def_estruct_tipoDato -> STACK LANGLE tipoDato RANGLE
Rule 83    instance_arraylist -> ARRAYLIST LPAREN RPAREN
Rule 84    stack_actuar -> ID DOT stack_funciones
Rule 85    stack_funciones -> stack_isEmpty
Rule 86    stack_funciones -> stack_push
Rule 87    stack_funciones -> stack_pop
Rule 88    stack_isEmpty -> ISEMPTY LPAREN RPAREN
Rule 89    stack_pop -> POP LPAREN RPAREN
Rule 90    stack_push -> PUSH LPAREN factor RPAREN

Terminals, with rules where they appear

ABSTRACT             : 
ACTUAL               : 
ADD                  : 
ANNOTATION           : 
APPEND               : 
ARRAYLIST            : 83
ARRAYOF              : 
ARROW                : 
AS                   : 
AS_SAFE              : 78
AT_NO_WS             : 
BOOLEAN              : 43 52 52 54 55 68
BREAK                : 
BY                   : 
CATCH                : 
CHAR                 : 42 66 66
CLASS                : 
COLONCOLON           : 
COMMA                : 
COMMENT              : 
COMPANION            : 
CONJ                 : 70
CONST                : 
CONSTRUCTOR          : 
CONTINUE             : 
CROSSINLINE          : 
DATA                 : 
DECR                 : 
DECREMENTIN          : 
DECREMENTONE         : 
DISJ                 : 71
DIVIDE               : 34
DIVIDEIN             : 
DO                   : 
DOT                  : 84
DOTS                 : 21 81
DOUBLE_ARROW         : 
DOUBLE_SEMICOLON     : 
DYNAMIC              : 
ELSE                 : 48
ENUM                 : 
EQEQ                 : 79
EQEQEQ               : 80
EQUAL                : 21 22 81
EXCL_EQ              : 76
EXCL_EQEQ            : 77
EXCL_NO_WS           : 
EXCL_WS              : 68 69
EXPECT               : 
EXTERNAL             : 
FIELD                : 
FILE                 : 
FINAL                : 
FINALLY              : 
FIRST                : 
FLOAT                : 40 57 59 59 60 61 64
FOR                  : 16
FUN                  : 
GE                   : 75
GET                  : 
HASH                 : 
ID                   : 16 16 21 22 44 53 53 54 55 67 67 69 81 84
IF                   : 46 47
IMPORT               : 
IN                   : 16
INCR                 : 
INCREMENTIN          : 
INCREMENTONE         : 
INCREMENTTIMES       : 
INDICES              : 
INFIX                : 
INIT                 : 
INLINE               : 
INNER                : 
INT                  : 39 56 56 57 58 60 63
INTERFACE            : 
INTERNAL             : 
IS                   : 
ISEMPTY              : 88
LANGLE               : 72 82
LAST                 : 
LATEINIT             : 
LCURL                : 16 46 47 48
LE                   : 74
LINEBREAK            : 
LINKEDL              : 
LISTOF               : 
LONG                 : 41 58 61 62 62 63 64
LPAREN               : 14 15 16 38 46 47 83 88 89 90
LSQUARE              : 
MARK_1               : 
MARK_2               : 
MINUS                : 32
MOD                  : 35
MODIN                : 
NOINLINE             : 
OBJECT               : 
OPEN                 : 
OPERATOR             : 
OUT                  : 
OVERRIDE             : 
PACKAGE              : 
PARAM                : 
PEEK                 : 
PLUS                 : 31
POLL                 : 
POP                  : 89
PRINT                : 14
PRINTLN              : 15
PRIVATE              : 
PROPERTY             : 
PROTECTED            : 
PUBLIC               : 
PUSH                 : 90
QUEST_WS             : 
QUEUE                : 
RANGE                : 
RANGLE               : 73 82
RCURL                : 16 46 47 48
RECEIVER             : 
REIFIED              : 
REMOVE               : 
REMOVEI              : 
REMOVEL              : 
REMOVEN              : 
RETURN               : 
RPAREN               : 14 15 16 38 46 47 83 88 89 90
RSQUARE              : 
SEALED               : 
SEMICOLON            : 7
SET                  : 
SETPARAM             : 
SINGLE_QUOTE         : 
SIZE                 : 
STACK                : 82
STRING_1             : 45 65 65
SUM                  : 
SUPER                : 
SUSPEND              : 
TAILREC              : 
TBOOLEAN             : 27
TCHAR                : 28
TDOUBLE              : 26
TEMPLATE             : 
TFLOAT               : 25
THIS                 : 
THREEDOTS            : 
THROW                : 
TIMES                : 33
TINT                 : 23
TLONG                : 24
TRY                  : 
TSTRING              : 29
TYPEOF               : 
TYPE_ALIAS           : 
VAL                  : 18
VALUE                : 
VAL_TIPO_1           : 
VAR                  : 17
VARARG               : 
VAR_TIPO_1           : 
WHEN                 : 
WHERE                : 
WHILE                : 
error                : 

Nonterminals, with rules where they appear

asignacion           : 6 7
asignacionSimple     : 19 20
condicion            : 46 47
condicionL           : 3 49
condicionN           : 5 51
condicionR           : 4 50
def_estruct_tipoDato : 13 81
else                 : 47
expression           : 2 30 31 32 33 34 35 38
factor               : 37 90
for                  : 8
if                   : 9
impresion            : 1
instance_arraylist   : 12 81
keywordVariables     : 19 81
line                 : 16 46 47 48 0
opL                  : 52 53 54 55
opR                  : 56 57 58 59 60 61 62 63 64 65 66 67
stack                : 10
stack_actuar         : 11
stack_funciones      : 84
stack_isEmpty        : 85
stack_pop            : 87
stack_push           : 86
term                 : 14 15 31 32 33 34 35 36
tipoDato             : 21 82
valor                : 21 22

Parsing method: LALR

state 0

    (0) S' -> . line
    (1) line -> . impresion
    (2) line -> . expression
    (3) line -> . condicionL
    (4) line -> . condicionR
    (5) line -> . condicionN
    (6) line -> . asignacion
    (7) line -> . asignacion SEMICOLON
    (8) line -> . for
    (9) line -> . if
    (10) line -> . stack
    (11) line -> . stack_actuar
    (12) line -> . instance_arraylist
    (13) line -> . def_estruct_tipoDato
    (14) impresion -> . PRINT LPAREN term RPAREN
    (15) impresion -> . PRINTLN LPAREN term RPAREN
    (31) expression -> . expression PLUS term
    (32) expression -> . expression MINUS term
    (33) expression -> . expression TIMES term
    (34) expression -> . expression DIVIDE term
    (35) expression -> . expression MOD term
    (36) expression -> . term
    (52) condicionL -> . BOOLEAN opL BOOLEAN
    (53) condicionL -> . ID opL ID
    (54) condicionL -> . ID opL BOOLEAN
    (55) condicionL -> . BOOLEAN opL ID
    (56) condicionR -> . INT opR INT
    (57) condicionR -> . INT opR FLOAT
    (58) condicionR -> . INT opR LONG
    (59) condicionR -> . FLOAT opR FLOAT
    (60) condicionR -> . FLOAT opR INT
    (61) condicionR -> . FLOAT opR LONG
    (62) condicionR -> . LONG opR LONG
    (63) condicionR -> . LONG opR INT
    (64) condicionR -> . LONG opR FLOAT
    (65) condicionR -> . STRING_1 opR STRING_1
    (66) condicionR -> . CHAR opR CHAR
    (67) condicionR -> . ID opR ID
    (68) condicionN -> . EXCL_WS BOOLEAN
    (69) condicionN -> . EXCL_WS ID
    (19) asignacion -> . keywordVariables asignacionSimple
    (20) asignacion -> . asignacionSimple
    (16) for -> . FOR LPAREN ID IN ID RPAREN LCURL line RCURL
    (46) if -> . IF LPAREN condicion RPAREN LCURL line RCURL
    (47) if -> . IF LPAREN condicion RPAREN LCURL line RCURL else
    (81) stack -> . keywordVariables ID DOTS def_estruct_tipoDato EQUAL instance_arraylist
    (84) stack_actuar -> . ID DOT stack_funciones
    (83) instance_arraylist -> . ARRAYLIST LPAREN RPAREN
    (82) def_estruct_tipoDato -> . STACK LANGLE tipoDato RANGLE
    (37) term -> . factor
    (38) term -> . LPAREN expression RPAREN
    (17) keywordVariables -> . VAR
    (18) keywordVariables -> . VAL
    (21) asignacionSimple -> . ID DOTS tipoDato EQUAL valor
    (22) asignacionSimple -> . ID EQUAL valor
    (39) factor -> . INT
    (40) factor -> . FLOAT
    (41) factor -> . LONG
    (42) factor -> . CHAR
    (43) factor -> . BOOLEAN
    (44) factor -> . ID
    (45) factor -> . STRING_1

    PRINT           shift and go to state 14
    PRINTLN         shift and go to state 17
    BOOLEAN         shift and go to state 18
    ID              shift and go to state 19
    INT             shift and go to state 20
    FLOAT           shift and go to state 21
    LONG            shift and go to state 22
    STRING_1        shift and go to state 23
    CHAR            shift and go to state 24
    EXCL_WS         shift and go to state 25
    FOR             shift and go to state 28
    IF              shift and go to state 29
    ARRAYLIST       shift and go to state 30
    STACK           shift and go to state 31
    LPAREN          shift and go to state 15
    VAR             shift and go to state 33
    VAL             shift and go to state 34

    line                           shift and go to state 1
    impresion                      shift and go to state 2
    expression                     shift and go to state 3
    condicionL                     shift and go to state 4
    condicionR                     shift and go to state 5
    condicionN                     shift and go to state 6
    asignacion                     shift and go to state 7
    for                            shift and go to state 8
    if                             shift and go to state 9
    stack                          shift and go to state 10
    stack_actuar                   shift and go to state 11
    instance_arraylist             shift and go to state 12
    def_estruct_tipoDato           shift and go to state 13
    term                           shift and go to state 16
    keywordVariables               shift and go to state 26
    asignacionSimple               shift and go to state 27
    factor                         shift and go to state 32

state 1

    (0) S' -> line .



state 2

    (1) line -> impresion .

    $end            reduce using rule 1 (line -> impresion .)
    RCURL           reduce using rule 1 (line -> impresion .)


state 3

    (2) line -> expression .
    (31) expression -> expression . PLUS term
    (32) expression -> expression . MINUS term
    (33) expression -> expression . TIMES term
    (34) expression -> expression . DIVIDE term
    (35) expression -> expression . MOD term

    $end            reduce using rule 2 (line -> expression .)
    RCURL           reduce using rule 2 (line -> expression .)
    PLUS            shift and go to state 35
    MINUS           shift and go to state 36
    TIMES           shift and go to state 37
    DIVIDE          shift and go to state 38
    MOD             shift and go to state 39


state 4

    (3) line -> condicionL .

    $end            reduce using rule 3 (line -> condicionL .)
    RCURL           reduce using rule 3 (line -> condicionL .)


state 5

    (4) line -> condicionR .

    $end            reduce using rule 4 (line -> condicionR .)
    RCURL           reduce using rule 4 (line -> condicionR .)


state 6

    (5) line -> condicionN .

    $end            reduce using rule 5 (line -> condicionN .)
    RCURL           reduce using rule 5 (line -> condicionN .)


state 7

    (6) line -> asignacion .
    (7) line -> asignacion . SEMICOLON

    $end            reduce using rule 6 (line -> asignacion .)
    RCURL           reduce using rule 6 (line -> asignacion .)
    SEMICOLON       shift and go to state 40


state 8

    (8) line -> for .

    $end            reduce using rule 8 (line -> for .)
    RCURL           reduce using rule 8 (line -> for .)


state 9

    (9) line -> if .

    $end            reduce using rule 9 (line -> if .)
    RCURL           reduce using rule 9 (line -> if .)


state 10

    (10) line -> stack .

    $end            reduce using rule 10 (line -> stack .)
    RCURL           reduce using rule 10 (line -> stack .)


state 11

    (11) line -> stack_actuar .

    $end            reduce using rule 11 (line -> stack_actuar .)
    RCURL           reduce using rule 11 (line -> stack_actuar .)


state 12

    (12) line -> instance_arraylist .

    $end            reduce using rule 12 (line -> instance_arraylist .)
    RCURL           reduce using rule 12 (line -> instance_arraylist .)


state 13

    (13) line -> def_estruct_tipoDato .

    $end            reduce using rule 13 (line -> def_estruct_tipoDato .)
    RCURL           reduce using rule 13 (line -> def_estruct_tipoDato .)


state 14

    (14) impresion -> PRINT . LPAREN term RPAREN

    LPAREN          shift and go to state 41


state 15

    (38) term -> LPAREN . expression RPAREN
    (31) expression -> . expression PLUS term
    (32) expression -> . expression MINUS term
    (33) expression -> . expression TIMES term
    (34) expression -> . expression DIVIDE term
    (35) expression -> . expression MOD term
    (36) expression -> . term
    (37) term -> . factor
    (38) term -> . LPAREN expression RPAREN
    (39) factor -> . INT
    (40) factor -> . FLOAT
    (41) factor -> . LONG
    (42) factor -> . CHAR
    (43) factor -> . BOOLEAN
    (44) factor -> . ID
    (45) factor -> . STRING_1

    LPAREN          shift and go to state 15
    INT             shift and go to state 43
    FLOAT           shift and go to state 44
    LONG            shift and go to state 45
    CHAR            shift and go to state 46
    BOOLEAN         shift and go to state 47
    ID              shift and go to state 48
    STRING_1        shift and go to state 49

    expression                     shift and go to state 42
    term                           shift and go to state 16
    factor                         shift and go to state 32

state 16

    (36) expression -> term .

    PLUS            reduce using rule 36 (expression -> term .)
    MINUS           reduce using rule 36 (expression -> term .)
    TIMES           reduce using rule 36 (expression -> term .)
    DIVIDE          reduce using rule 36 (expression -> term .)
    MOD             reduce using rule 36 (expression -> term .)
    $end            reduce using rule 36 (expression -> term .)
    RPAREN          reduce using rule 36 (expression -> term .)
    SEMICOLON       reduce using rule 36 (expression -> term .)
    RCURL           reduce using rule 36 (expression -> term .)


state 17

    (15) impresion -> PRINTLN . LPAREN term RPAREN

    LPAREN          shift and go to state 50


state 18

    (52) condicionL -> BOOLEAN . opL BOOLEAN
    (55) condicionL -> BOOLEAN . opL ID
    (43) factor -> BOOLEAN .
    (70) opL -> . CONJ
    (71) opL -> . DISJ

    PLUS            reduce using rule 43 (factor -> BOOLEAN .)
    MINUS           reduce using rule 43 (factor -> BOOLEAN .)
    TIMES           reduce using rule 43 (factor -> BOOLEAN .)
    DIVIDE          reduce using rule 43 (factor -> BOOLEAN .)
    MOD             reduce using rule 43 (factor -> BOOLEAN .)
    $end            reduce using rule 43 (factor -> BOOLEAN .)
    RCURL           reduce using rule 43 (factor -> BOOLEAN .)
    CONJ            shift and go to state 52
    DISJ            shift and go to state 53

    opL                            shift and go to state 51

state 19

    (53) condicionL -> ID . opL ID
    (54) condicionL -> ID . opL BOOLEAN
    (67) condicionR -> ID . opR ID
    (84) stack_actuar -> ID . DOT stack_funciones
    (21) asignacionSimple -> ID . DOTS tipoDato EQUAL valor
    (22) asignacionSimple -> ID . EQUAL valor
    (44) factor -> ID .
    (70) opL -> . CONJ
    (71) opL -> . DISJ
    (72) opR -> . LANGLE
    (73) opR -> . RANGLE
    (74) opR -> . LE
    (75) opR -> . GE
    (76) opR -> . EXCL_EQ
    (77) opR -> . EXCL_EQEQ
    (78) opR -> . AS_SAFE
    (79) opR -> . EQEQ
    (80) opR -> . EQEQEQ

    DOT             shift and go to state 56
    DOTS            shift and go to state 57
    EQUAL           shift and go to state 58
    PLUS            reduce using rule 44 (factor -> ID .)
    MINUS           reduce using rule 44 (factor -> ID .)
    TIMES           reduce using rule 44 (factor -> ID .)
    DIVIDE          reduce using rule 44 (factor -> ID .)
    MOD             reduce using rule 44 (factor -> ID .)
    $end            reduce using rule 44 (factor -> ID .)
    RCURL           reduce using rule 44 (factor -> ID .)
    CONJ            shift and go to state 52
    DISJ            shift and go to state 53
    LANGLE          shift and go to state 59
    RANGLE          shift and go to state 60
    LE              shift and go to state 61
    GE              shift and go to state 62
    EXCL_EQ         shift and go to state 63
    EXCL_EQEQ       shift and go to state 64
    AS_SAFE         shift and go to state 65
    EQEQ            shift and go to state 66
    EQEQEQ          shift and go to state 67

    opL                            shift and go to state 54
    opR                            shift and go to state 55

state 20

    (56) condicionR -> INT . opR INT
    (57) condicionR -> INT . opR FLOAT
    (58) condicionR -> INT . opR LONG
    (39) factor -> INT .
    (72) opR -> . LANGLE
    (73) opR -> . RANGLE
    (74) opR -> . LE
    (75) opR -> . GE
    (76) opR -> . EXCL_EQ
    (77) opR -> . EXCL_EQEQ
    (78) opR -> . AS_SAFE
    (79) opR -> . EQEQ
    (80) opR -> . EQEQEQ

    PLUS            reduce using rule 39 (factor -> INT .)
    MINUS           reduce using rule 39 (factor -> INT .)
    TIMES           reduce using rule 39 (factor -> INT .)
    DIVIDE          reduce using rule 39 (factor -> INT .)
    MOD             reduce using rule 39 (factor -> INT .)
    $end            reduce using rule 39 (factor -> INT .)
    RCURL           reduce using rule 39 (factor -> INT .)
    LANGLE          shift and go to state 59
    RANGLE          shift and go to state 60
    LE              shift and go to state 61
    GE              shift and go to state 62
    EXCL_EQ         shift and go to state 63
    EXCL_EQEQ       shift and go to state 64
    AS_SAFE         shift and go to state 65
    EQEQ            shift and go to state 66
    EQEQEQ          shift and go to state 67

    opR                            shift and go to state 68

state 21

    (59) condicionR -> FLOAT . opR FLOAT
    (60) condicionR -> FLOAT . opR INT
    (61) condicionR -> FLOAT . opR LONG
    (40) factor -> FLOAT .
    (72) opR -> . LANGLE
    (73) opR -> . RANGLE
    (74) opR -> . LE
    (75) opR -> . GE
    (76) opR -> . EXCL_EQ
    (77) opR -> . EXCL_EQEQ
    (78) opR -> . AS_SAFE
    (79) opR -> . EQEQ
    (80) opR -> . EQEQEQ

    PLUS            reduce using rule 40 (factor -> FLOAT .)
    MINUS           reduce using rule 40 (factor -> FLOAT .)
    TIMES           reduce using rule 40 (factor -> FLOAT .)
    DIVIDE          reduce using rule 40 (factor -> FLOAT .)
    MOD             reduce using rule 40 (factor -> FLOAT .)
    $end            reduce using rule 40 (factor -> FLOAT .)
    RCURL           reduce using rule 40 (factor -> FLOAT .)
    LANGLE          shift and go to state 59
    RANGLE          shift and go to state 60
    LE              shift and go to state 61
    GE              shift and go to state 62
    EXCL_EQ         shift and go to state 63
    EXCL_EQEQ       shift and go to state 64
    AS_SAFE         shift and go to state 65
    EQEQ            shift and go to state 66
    EQEQEQ          shift and go to state 67

    opR                            shift and go to state 69

state 22

    (62) condicionR -> LONG . opR LONG
    (63) condicionR -> LONG . opR INT
    (64) condicionR -> LONG . opR FLOAT
    (41) factor -> LONG .
    (72) opR -> . LANGLE
    (73) opR -> . RANGLE
    (74) opR -> . LE
    (75) opR -> . GE
    (76) opR -> . EXCL_EQ
    (77) opR -> . EXCL_EQEQ
    (78) opR -> . AS_SAFE
    (79) opR -> . EQEQ
    (80) opR -> . EQEQEQ

    PLUS            reduce using rule 41 (factor -> LONG .)
    MINUS           reduce using rule 41 (factor -> LONG .)
    TIMES           reduce using rule 41 (factor -> LONG .)
    DIVIDE          reduce using rule 41 (factor -> LONG .)
    MOD             reduce using rule 41 (factor -> LONG .)
    $end            reduce using rule 41 (factor -> LONG .)
    RCURL           reduce using rule 41 (factor -> LONG .)
    LANGLE          shift and go to state 59
    RANGLE          shift and go to state 60
    LE              shift and go to state 61
    GE              shift and go to state 62
    EXCL_EQ         shift and go to state 63
    EXCL_EQEQ       shift and go to state 64
    AS_SAFE         shift and go to state 65
    EQEQ            shift and go to state 66
    EQEQEQ          shift and go to state 67

    opR                            shift and go to state 70

state 23

    (65) condicionR -> STRING_1 . opR STRING_1
    (45) factor -> STRING_1 .
    (72) opR -> . LANGLE
    (73) opR -> . RANGLE
    (74) opR -> . LE
    (75) opR -> . GE
    (76) opR -> . EXCL_EQ
    (77) opR -> . EXCL_EQEQ
    (78) opR -> . AS_SAFE
    (79) opR -> . EQEQ
    (80) opR -> . EQEQEQ
